# Registration-login-system

./: README.md  db.sqlite3  manage.py  pyproject.toml
auth/: pyvenv.cfg
auth/Scripts/: activate  activate.bat
authentacation_system/: asgi.py  settings.py  urls.py  wsgi.py
user_auth/: models.py  serializers.py  views.py
user_auth/migrations/: 0001_initial.py
